bg alignment fixed

--- a/src/Components/VoteText/voteText.module.scss
+++ b/src/Components/VoteText/voteText.module.scss
@@ -46,13 +46,13 @@
   }
 
   @media screen and (min-width: 992px) and (max-width: 1199px) {
-    padding-top: 80px;
+    padding-top: 30px;
     margin-top: 20px;
   }
 
   @media screen and (min-width: 1200px) {
     padding-top: 20px;
-    margin-top: 60px;
+    margin-top: 40px;
   }
 
   .plentyHeading {
