--- a/src/Pages/Governance/governance.module.scss
+++ b/src/Pages/Governance/governance.module.scss
@@ -1,14 +1,14 @@
 .govContainer {
   color: var(--theme-governance-text);
-
-  //background: var(--theme-governance-bg);
   background: var(--theme-governance-bg);
   @media screen and (min-width: 320px) and (max-width: 992px) {
     background: var(--theme-governance-mobileBg);
   }
-
-  @media screen and (min-width: 1400px) {
-    height: 1800px;
+  @media screen and (min-width: 1068px) and (max-width: 1185px) {
+    background: var(--theme-governance-bg-1);
+  }
+  @media screen and (min-width: 1186px) {
+    background: var(--theme-governance-bg-2);
   }
 
   .gov {
